--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-     <h1>Welcome To My First Web-design Homework Project!</h1>
+     <h1>Price College of Business IT</h1>
       <a href="Accordion.html">Accordion Page</a>
        <a href="Carousel.html">Carousel Page</a>
     </div>>
