--- a/Carousel.html
+++ b/Carousel.html
@@ -16,7 +16,8 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FMichael_F._Price_College_of_Business&psig=AOvVaw3sWSSgn5bamk-wA7EyW2QL&ust=1694027458743000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJD3npmWlIEDFQAAAAAdAAAAABAE" class="d-block w-100" alt="...">
+
+      <img src="https://images.squarespace-cdn.com/content/v1/570815def8baf3b9cbdcc796/1575663379834-4SMN8CVP8M5GBTMPZXHG/F7J2238.jpg?format=2500w" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="..." class="d-block w-100" alt="...">
