--- a/index.html
+++ b/index.html
@@ -37,8 +37,81 @@
 
     <div class="container mt-5">
         <h1>Welcome to Price College of Business IT</h1>
-        <a href="Carousel.html">Carousel Page</a>
-      <a href="Accordion.html">Accordion Page</a>
+        <!-- Add your content here -->
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</body>
+</html>
+This code adds a Bootstrap navbar at the top of the page with navigation links and adjusts the container for the content accordingly. You can further customize the navbar and the content as needed.
+
+
+
+
+User
+make it a  nav bar and tabs. also change the welcome to price college of business it to red
+ChatGPT
+
+To create a Bootstrap navbar with tabs and change the "Welcome to Price College of Business IT" text to red, you can modify your HTML code as follows:
+
+html
+Copy code
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+        body {
+            background-image: url('https://images.squarespace-cdn.com/content/v1/570815def8baf3b9cbdcc796/1575663379834-4SMN8CVP8M5GBTMPZXHG/F7J2238.jpg?format=2500w');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+
+        .navbar-text {
+            color: red;
+        }
+    </style>
+</head>
+<body>
+    <!-- Bootstrap Navbar with Tabs -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Price College of Business IT</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tab1" data-bs-toggle="tab">Tab 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tab2" data-bs-toggle="tab">Tab 2</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1 class="navbar-text">Welcome to Price College of Business IT</h1>
+        
+        <!-- Tab Content -->
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="tab1">
+                <!-- Tab 1 content goes here -->
+                <p>Content for Tab 1</p>
+            </div>
+            <div class="tab-pane fade" id="tab2">
+                <<a href="Carousel.html">Carousel Page</a>
+                <a href="Accordion.html">Accordion Page</a>>
+                <p>Content for Tab 2</p>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
