--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Price College of Business IT</a>
+              <a href="Carousel.html">Carousel Page</a>
+              <a href="Accordion.html">Accordion Page</a>
         </div>
     </nav>
 
