--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
             color: red;
             text-align: center;
         }
+
+        .navbar-img {
+            max-width: 30px;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Price College of Business IT</a>
-              <a href="Carousel.html">Carousel Page</a>
-              <a href="Accordion.html">Accordion Page</a>
+            <a class="navbar-brand" href="#">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Logo" class="navbar-img">Price College of Business IT
+            </a>
+            <a href="Carousel.html">Carousel Page</a>
+            <a href="Accordion.html">Accordion Page</a>
         </div>
     </nav>
 
@@ -34,10 +41,7 @@
         
         <!-- Tab Content -->
         <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="tab1">
-                <!-- Tab 1 content goes here -->
-                <p>Content for Tab 1</p>
-            </div>
+            <!-- Removed the Tab 1 content -->
             <div class="tab-pane fade" id="tab2">
                 <!-- Tab 2 content goes here -->
                 <p>Content for Tab 2</p>
