--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Logo" class="navbar-img">Price College of Business IT
+                <img src="https://flyclipart.com/price-college-of-business-ou-calendar-jcpenney-leadership-jcpenney-logo-png-893159" alt="Logo" class="navbar-img">Price College of Business IT
             </a>
             <a href="Carousel.html">Carousel Page</a>
             <a href="Accordion.html">Accordion Page</a>
