--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             text-align: center;
         }
 
-        .navbar-img {
-            max-width: 30px;
+        .navbar-emblem {
+            max-height: 40px; /* Adjust the height as needed */
             margin-right: 10px;
         }
     </style>
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/326774171_910388373467225_8309189081923873401_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=jXN_BBF-27cAX_lCruQ&_nc_ht=scontent.ftul2-1.fna&oh=00_AfABHaPrwkv_M0xkeVRmbmj-AKQ8lg3D9CTVOvKEVDeKUw&oe=64FCE5F8">JCPENNEY LEADERSHIP PROGRAM
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Emblem" class="navbar-emblem">Price College of Business IT
             </a>
             <a href="Carousel.html">Carousel Page</a>
             <a href="Accordion.html">Accordion Page</a>
@@ -37,7 +37,7 @@
     </nav>
 
     <div class="container mt-5">
-        <h1 class="navbar-text">THE NEXT LEVEL OF LEADERSHIP</h1>
+        <h1 class="navbar-text">Welcome to Price College of Business IT</h1>
         
         <!-- Tab Content -->
         <div class="tab-content" id="myTabContent">
