--- a/index.html
+++ b/index.html
@@ -17,22 +17,16 @@
             color: red;
             text-align: center;
         }
-
-        .navbar-emblem {
-            max-height: 40px; /* Adjust the height as needed */
-            margin-right: 10px;
-        }
     </style>
 </head>
 <body>
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Emblem" class="navbar-emblem">Price College of Business IT
-            </a>
+            <a class="navbar-brand" href="#">Price College of Business IT</a>
             <a href="Carousel.html">Carousel Page</a>
             <a href="Accordion.html">Accordion Page</a>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Image" style="max-height: 30px;">
         </div>
     </nav>
 
