--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Price College of Business IT</a>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Image" class="navbar-img mr-2">
+            <a class="navbar-brand" href="#">JCPENNEY LEADERSHIP PROGRAM</a>
             <a href="Carousel.html">Carousel Page</a>
             <a href="Accordion.html">Accordion Page</a>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Image" style="max-height: 30px;">
         </div>
     </nav>
 
     <div class="container mt-5">
-        <h1 class="navbar-text">Welcome to Price College of Business IT</h1>
+        <h1 class="navbar-text">THE NEXT LEVEL OF LEADERSHIP</h1>
         
         <!-- Tab Content -->
         <div class="tab-content" id="myTabContent">
