--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="image1.jpg" class="card-img-top" alt="Image 1">
+                    <img src="https://www.theciada.com/images/site/scholorship.png">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 1</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">SCHOLARSHIP</h5>
+                        <p class="card-text">academics are important to the associates in the program and displays the individual discipline, drive, and focus of our leaders.</p>
                     </div>
                 </div>
             </div>
