--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <!-- Instagram image (first image) -->
-                    <img src="https://scontent-hou1-1.cdninstagram.com/v/t51.2885-15/e35/220182447_156000383382534_2018899892214137460_n.jpg?_nc_ht=scontent-hou1-1.cdninstagram.com&_nc_cat=111&_nc_ohc=nlGvpyMbJ14AX_8WULn&edm=ABfd0MgBAAAA&ccb=7-4&oh=3e848d7ca87c868cd4d9d6d7c6df237d&oe=63218D7B&_nc_sid=7bff83">
+                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.td.org%2Finsights%2F5-must-have-principles-of-professionalism&psig=AOvVaw10YYRxVhdZyoJWbiYZJupk&ust=1694050741997000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCLD0m_fslIEDFQAAAAAdAAAAABAb">
                     <div class="card-body">
                         <h5 class="card-title">PROFESSIONALISM</h5>
                         <p class="card-text">This program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.</p>
