--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FjcplpOU&psig=AOvVaw0Tby3XAgKGzH_TCmbzNGZj&ust=1694039632332000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJCZwsXDlIEDFQAAAAAdAAAAABAE" alt="Image" class="navbar-img mr-2">
+            <img src="https://thumbs.dreamstime.com/b/presenting-signs-professionalism-care-242339851.jpg">
             <a class="navbar-brand" href="#">JCPENNEY LEADERSHIP PROGRAM</a>
             <a href="Carousel.html">Carousel Page</a>
             <a href="Accordion.html">Accordion Page</a>
