--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <!-- Card 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <!-- Instagram image (first image) -->
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.td.org%2Finsights%2F5-must-have-principles-of-professionalism&psig=AOvVaw10YYRxVhdZyoJWbiYZJupk&ust=1694050741997000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCLD0m_fslIEDFQAAAAAdAAAAABAb">
+                    
+                    <img src="https://www.google.com/search?q=Jcpenney+leadership+program+reddit&tbm=isch&hl=en&bih=931&biw=1903&rlz=1C1CHBF_enUS1026US1026&sa=X&ved=2ahUKEwiH9syJ8JSBAxWFPd4AHd0iCfQQgowBKAB6BAgBEDA">
                     <div class="card-body">
                         <h5 class="card-title">PROFESSIONALISM</h5>
                         <p class="card-text">This program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.</p>
