--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-md-4">
                 <div class="card">
                     
-                    <img src="https://www.google.com/search?q=Jcpenney+leadership+program+reddit&tbm=isch&hl=en&bih=931&biw=1903&rlz=1C1CHBF_enUS1026US1026&sa=X&ved=2ahUKEwiH9syJ8JSBAxWFPd4AHd0iCfQQgowBKAB6BAgBEDA">
+                    <img src="https://cdn2.psychologytoday.com/assets/styles/article_inline_half_caption/public/field_blog_entry_images/2023-01/AdobeStock_446316751.jpeg.jpg?itok=BFYWae3M">
                     <div class="card-body">
                         <h5 class="card-title">PROFESSIONALISM</h5>
                         <p class="card-text">This program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.</p>
