--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <!-- Card 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="image3.jpg" class="card-img-top" alt="Image 3">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/346312176_168794289481214_2079073525022009197_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=52f669&_nc_ohc=Hp8wtiokinEAX-ghw9A&_nc_ht=scontent.ftul2-1.fna&oh=00_AfAUWWEDbGiMw9h-Y7hyov0ZsCcb4dFtONulmb6f1rs8fA&oe=64FBE529">
                     <div class="card-body">
                         <h5 class="card-title">PHILANTHROPHY</h5>
                         <p class="card-text">A good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service..</p>
