--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <div class="col-md-4">
                 <div class="card">
                     
-                    <img src="https://cdn2.psychologytoday.com/assets/styles/article_inline_half_caption/public/field_blog_entry_images/2023-01/AdobeStock_446316751.jpeg.jpg?itok=BFYWae3M">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/279026244_5205243376208086_7548592238619078886_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5614bc&_nc_ohc=8JLtPHkU5h4AX8S1d_q&_nc_ht=scontent.ftul2-1.fna&oh=00_AfCajG4J81QfvwtTeF6Vyw9yMRpV7c3NfQ5vv2yszF735Q&oe=64FD8335">
                     <div class="card-body">
-                        <h5 class="card-title">PROFESSIONALISM</h5>
-                        <p class="card-text">This program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.</p>
+                        <h5 class="card-title">PHILANTHROPHY</h5>
+                        <p class="card-text">  A good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service.</p>
                     </div>
                 </div>
             </div>
@@ -72,8 +72,10 @@
                 <div class="card">
                     <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/346312176_168794289481214_2079073525022009197_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=52f669&_nc_ohc=Hp8wtiokinEAX-ghw9A&_nc_ht=scontent.ftul2-1.fna&oh=00_AfAUWWEDbGiMw9h-Y7hyov0ZsCcb4dFtONulmb6f1rs8fA&oe=64FBE529">
                     <div class="card-body">
-                        <h5 class="card-title">PHILANTHROPHY</h5>
-                        <p class="card-text">A good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service..</p>
+                        <h5 class="card-title">PROFESSIONALISM</h5>
+                        <p class="card-text">This program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.
+                            
+                        </p>
                     </div>
                 </div>
             </div>
