--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-md-4">
                 <div class="card">
                     
-                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/279026244_5205243376208086_7548592238619078886_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5614bc&_nc_ohc=8JLtPHkU5h4AX8S1d_q&_nc_ht=scontent.ftul2-1.fna&oh=00_AfCajG4J81QfvwtTeF6Vyw9yMRpV7c3NfQ5vv2yszF735Q&oe=64FD8335">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/241126609_4446481345417630_2384666597790208161_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5614bc&_nc_ohc=yeGfunX6K3YAX-F231x&_nc_ht=scontent.ftul2-1.fna&oh=00_AfBAixsZXFre-Yn0Oo4h6OqtrKQ8cfmlPupgCR2M18UV3g&oe=64FCC601">
                     <div class="card-body">
                         <h5 class="card-title">PHILANTHROPHY</h5>
                         <p class="card-text">  A good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service.</p>
@@ -81,15 +81,15 @@
             </div>
         </div>
 
-        <!-- Additional Card Grids -->
+       
         <div class="row mt-4">
             <!-- Card 4 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="image4.jpg" class="card-img-top" alt="Image 4">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/276124787_5123227674409657_3665589701590588634_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5614bc&_nc_ohc=SEqoKWLzpeEAX9s0ntj&_nc_ht=scontent.ftul2-1.fna&oh=00_AfAevkLKKAeO_a9JwzrwinuHBcuB3jEqQaflEqfWyWnetw&oe=64FDAC45">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 4</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">NETWORKING</h5>
+                        <p class="card-text">Associates learn to cultivate important professional relationships with different companies, industries, and c-level executives throughout their tenure..</p>
                     </div>
                 </div>
             </div>
@@ -99,8 +99,8 @@
                 <div class="card">
                     <img src="image5.jpg" class="card-img-top" alt="Image 5">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 5</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">FELLOWSHIP</h5>
+                        <p class="card-text">The leadership program continuously seeks to expand interaction between the associates, alumni, leaders, and members of local and state business communities, as well as faculty and staff of the OU Price College of Business..</p>
                     </div>
                 </div>
             </div>
@@ -108,10 +108,10 @@
             <!-- Card 6 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="image6.jpg" class="card-img-top" alt="Image 6">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/311780564_5698520786880340_7891020983775158294_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5614bc&_nc_ohc=fj0lsYeHapEAX85tmwU&_nc_ht=scontent.ftul2-1.fna&oh=00_AfBNXkUN8kvfyHu9CQ795hXIh6Jd5dRXWZV6mVTpImRUCQ&oe=64FD21E8">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 6</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">DIVERSITY</h5>
+                        <p class="card-text">Have a basic understanding of other cultures and an openness towards them, allowing students to adapt effectively in the global business environment.</p>
                     </div>
                 </div>
             </div>
