--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://www.theciada.com/images/site/scholorship.png">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/319544670_1084837378951433_3903141772874739726_n.jpg?stp=cp6_dst-jpg&_nc_cat=108&ccb=1-7&_nc_sid=5614bc&_nc_ohc=Amm0G0J22R4AX9s7Ofz&_nc_ht=scontent.ftul2-1.fna&oh=00_AfB5fbDSrHNo5WjFFexT4GEHDetTXDfBdmxE7Jz6xEq4XQ&oe=64FCCA11">
                     <div class="card-body">
                         <h5 class="card-title">SCHOLARSHIP</h5>
                         <p class="card-text">Academics are important to the associates in the program and display the individual discipline, drive, and focus of our leaders.</p>
@@ -97,7 +97,7 @@
             <!-- Card 5 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="image5.jpg" class="card-img-top" alt="Image 5">
+                    <img src="https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/321794639_662508808988132_290153007107840546_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5614bc&_nc_ohc=81DLZqL3qesAX-X1REf&_nc_ht=scontent.ftul2-1.fna&oh=00_AfDUVNaKOGkbjbmKHBQd5RSsrbwBt-CUK_BH34_MQnE7vw&oe=64FD68D8">
                     <div class="card-body">
                         <h5 class="card-title">FELLOWSHIP</h5>
                         <p class="card-text">The leadership program continuously seeks to expand interaction between the associates, alumni, leaders, and members of local and state business communities, as well as faculty and staff of the OU Price College of Business..</p>
