--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
             background-attachment: fixed;
         }
 
+        .navbar {
+            background-color: crimson;
+            color: cream;
+        }
+
         .navbar-text {
-            color: red;
+            color: cream;
             text-align: center;
+        }
+
+        .card {
+            width: 18rem; /* Set a fixed width for all cards */
+        }
+
+        .navbar img {
+            max-width: 100px; /* Reduce the size of the image in the navbar */
         }
     </style>
 </head>
