--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         .navbar-text {
-            color: cream;
+            color: red;
             text-align: center;
         }
 
