--- a/Join us.html
+++ b/Join us.html
@@ -30,25 +30,25 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>The JCPenney Leadership Program in the Price College of Business offers students learning experiences designed to bridge the gap between collegiate and professional lives.
+          The JCPenney Leadership Program in the Price College of Business offers students learning experiences designed to bridge the gap between collegiate and professional lives.<br>
 
 Our program is built and modeled upon our 6 leadership pillars.
 
-Scholarship: academics are important to the associates in the program and displays the individual discipline, drive, and focus of our leaders.
-Professionalism: this program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.
-Philanthropy: a good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service.
-Networking: associates learn to cultivate important professional relationships with different companies, industries, and c-level executives throughout their tenure.
-Fellowship: the leadership program continuously seeks to expand interaction between the associates, alumni, leaders, and members of local and state business communities, as well as faculty and staff of the OU Price College of Business.
-Diversity: have a basic understanding of other cultures and an openness towards them, allowing students to adapt effectively in the global business environment.
-Upon completion of the program, students will have demonstrated that they:
+<strong>Scholarship:</strong> academics are important to the associates in the program and displays the individual discipline, drive, and focus of our leaders.<br>
+<strong>Professionalism:</strong> this program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.<br>
+<strong>Philanthropy:</strong> a good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service.<br>
+<strong>Networking:</strong> associates learn to cultivate important professional relationships with different companies, industries, and c-level executives throughout their tenure.<br>
+<strong>Fellowship:</strong> the leadership program continuously seeks to expand interaction between the associates, alumni, leaders, and members of local and state business communities, as well as faculty and staff of the OU Price College of Business.<br>
+<strong>Diversity:</strong> have a basic understanding of other cultures and an openness towards them, allowing students to adapt effectively in the global business environment.<br>
+Upon completion of the program, students will have demonstrated that they:<br>
 
-Gained awareness of personal strengths and areas for improvement
-Increased their knowledge and understanding of what makes a great leader
-Understand the responsibilities of the leadership role
-Gained direct experience as a leader
-Increased capacities and confidence in a variety of soft-skill areas
-Understand the significance of networking and establishing relationships
-Internalized the importance of philanthropy.
+- Gained awareness of personal strengths and areas for improvement <br>
+- Increased their knowledge and understanding of what makes a great leader <br>
+- Understand the responsibilities of the leadership role<br>
+- Gained direct experience as a leader<br>
+- Increased capacities and confidence in a variety of soft-skill areas<br>
+- Understand the significance of networking and establishing relationships<br>
+- Internalized the importance of philanthropy.
             </div>
           </div>
         </div>
