--- a/Join us.html
+++ b/Join us.html
@@ -18,7 +18,25 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+               The JCPenney Leadership Program in the Price College of Business offers students learning experiences designed to bridge the gap between collegiate and professional lives.<br>
+
+Our program is built and modeled upon our 6 leadership pillars.
+
+<strong>Scholarship:</strong> academics are important to the associates in the program and displays the individual discipline, drive, and focus of our leaders.<br>
+<strong>Professionalism:</strong> this program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.<br>
+<strong>Philanthropy:</strong> a good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service.<br>
+<strong>Networking:</strong> associates learn to cultivate important professional relationships with different companies, industries, and c-level executives throughout their tenure.<br>
+<strong>Fellowship:</strong> the leadership program continuously seeks to expand interaction between the associates, alumni, leaders, and members of local and state business communities, as well as faculty and staff of the OU Price College of Business.<br>
+<strong>Diversity:</strong> have a basic understanding of other cultures and an openness towards them, allowing students to adapt effectively in the global business environment.<be> <br>
+Upon completion of the program, students will have demonstrated that they:<br>
+
+- Gained awareness of personal strengths and areas for improvement <br>
+- Increased their knowledge and understanding of what makes a great leader <br>
+- Understand the responsibilities of the leadership role<br>
+- Gained direct experience as a leader<br>
+- Increased capacities and confidence in a variety of soft-skill areas<br>
+- Understand the significance of networking and establishing relationships<br>
+- Internalized the importance of philanthropy.
             </div>
           </div>
         </div>
@@ -30,25 +48,52 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-          The JCPenney Leadership Program in the Price College of Business offers students learning experiences designed to bridge the gap between collegiate and professional lives.<br>
+          Thank you for your interest in the JCPenney Leadership Program! This program is designed for high-achieving students that demonstrate or show potential for leadership. This program is devoted to cultivating students' leadership qualities and therefore requires a commitment of 5-10 hours from each associate every month. Please be sure you can commit your time to this program before applying.
 
-Our program is built and modeled upon our 6 leadership pillars.
+<strong>Eligibility criteria in order to apply
+</strong>
+-  Applicants MUST attend a Prospective Associate Information Session. These sessions will be offered both at the end of the Spring semester and beginning of the Fall semester. RSVP for an info session by clicking here: https://ou.campuslabs.com/engage/submitter/form/start/536321 <br>  
+- Applicants must have attended college two full semesters and have earned at least 24 hours of credit with a cumulative GPA of 3.25 or higher.  (You must have sophomore standing within Price College at OU) <br>  
+- Applicants must be enrolled full-time (12 hours) and maintain status as a Price College undergraduate major.<br>  
+- Applicants must have no less than four full semesters remaining before earning an undergraduate degree. (Students graduating prior to May 2024 are not eligible to apply).<br>  <br>  
 
-<strong>Scholarship:</strong> academics are important to the associates in the program and displays the individual discipline, drive, and focus of our leaders.<br>
-<strong>Professionalism:</strong> this program is a bridge for college students to enter into the professional world, helping develop skills necessary for the work environment.<br>
-<strong>Philanthropy:</strong> a good leader is sensitive to the needs of others. The leadership program provides opportunities for associates to internalize the need for and reward from participation in service.<br>
-<strong>Networking:</strong> associates learn to cultivate important professional relationships with different companies, industries, and c-level executives throughout their tenure.<br>
-<strong>Fellowship:</strong> the leadership program continuously seeks to expand interaction between the associates, alumni, leaders, and members of local and state business communities, as well as faculty and staff of the OU Price College of Business.<br>
-<strong>Diversity:</strong> have a basic understanding of other cultures and an openness towards them, allowing students to adapt effectively in the global business environment.<br>
-Upon completion of the program, students will have demonstrated that they:<br>
+<strong>Essays</strong>
 
-- Gained awareness of personal strengths and areas for improvement <br>
-- Increased their knowledge and understanding of what makes a great leader <br>
-- Understand the responsibilities of the leadership role<br>
-- Gained direct experience as a leader<br>
-- Increased capacities and confidence in a variety of soft-skill areas<br>
-- Understand the significance of networking and establishing relationships<br>
-- Internalized the importance of philanthropy.
+There are three essay questions on the application. Please draft your answers prior to beginning the application as you must fully complete the application when you begin filling it out.  Responses are to be between 300-500 words in length, about 600-1000 characters. The questions are:
+
+<strong>Essay Question #1- </strong>In what 3 ways would you like to improve yourself professionally and / or as a leader? <br>  
+
+<strong>Essay Question #2- </strong> What business leader do you look up to and why?<br>
+
+<strong>Essay Question #3- </strong>What non-fiction book have you RECENTLY read that has taught you an important leadership lesson? What is the lesson that you learned from this book and why is this lesson important to you?<br><br>
+
+Applications close on at <strong> NOON on Friday, September 8.</strong> Applications submitted after this deadline will not be accepted.<br><br>
+
+<strong>Letters of Recommendation</strong> <br>
+
+Students must submit two letters of recommendation. Ask your two references to submit their letters through our online recommendation form found at the following link: https://ou.campuslabs.com/engage/submitter/form/start/425249 <br><br>
+
+- Your letters of recommendation must be received by the application deadline of NOON on Friday, September 8, 2023. <br>
+- Your recommendation letters should attest to your good character as well as to your leadership ability and/or other qualities that indicate acceptability for admission to the program. Letters should be from individuals who have personal knowledge of your character and ability and should attest to the extent that you are a high-potential, high-performance business student in the tradition of the Leadership Program.<br>
+- Sophomores: one letter must be from OU faculty (any) <br>
+- Juniors: one letter must be from Price College faculty<br>
+- Transfer students: one letter must come from a faculty member at your previous college<br>
+- Failure to submit two (2) letters of recommendation will disqualify you from consideration. <br><br>
+<strong>Interviews</strong><br><br>
+
+If you are selected to move on in the application process, you will be contacted to come into the JCPenney office and sign up for an interview time. <br><br>
+
+- Not every applicant will be invited to interview. <br>
+- Interview dress is business professional.<br>
+- Interviews are conducted with a panel of interviewers.<br><br>
+<strong>Apply</strong> <br>
+
+or visit: https://ou.campuslabs.com/engage/submitter/form/start/588080
+
+If you are admitted into the program:<br><br>
+
+Successful applicants are REQUIRED to attend a new member orientation after being accepted. This event is scheduled for Friday, September 29th from 3-7pm.
+Fully inducted new associates are responsible for the $100.00 membership dues; however, scholarships are available for students who need financial assistance.
             </div>
           </div>
         </div>
