--- a/Join us.html
+++ b/Join us.html
@@ -43,7 +43,7 @@ Upon completion of the program, students will have demonstrated that they:<br>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Accordion Item #2
+              Apply to the Program - Applications Close September 8th at NOON!!
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -100,12 +100,13 @@ Fully inducted new associates are responsible for the $100.00 membership dues; h
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Accordion Item #3
+              Message From the Director
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>The JCPenney Leadership Center.</strong> <br> <br><strong> Message from the Director</strong><br>The JCPenney Leadership Program at the Price College of Business, rooted in a rich tradition of excellence, strives to build leaders that fulfill the purpose of Price and are prepared for the diverse and global opportunities presented in the 21st century. The program provides high performing undergraduate business students with opportunities to develop their leadership potential through a variety of learning and networking experiences. Promoting personal and professional growth, the program broadens students’ perspectives, strengthens business skills, and creates leaders in industries and communities across the nation and around the world.<br> Sincerely,<br> Breea Clark, J.D.<br>Director of JCPenney Leadership Center
+
             </div>
           </div>
         </div>
