--- a/Join us.html
+++ b/Join us.html
@@ -112,7 +112,20 @@ Fully inducted new associates are responsible for the $100.00 membership dues; h
         </div>
       </div>
     </div>
-   
+   <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                       Support the Program
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                       <p>You can support the program at the following link <a href="https://giving.oufoundation.org/OnlineGivingWeb/Giving/OnlineGiving/JCPLeadership">website</a> for more information.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
