--- a/Join us.html
+++ b/Join us.html
@@ -8,7 +8,7 @@
     <style>
       /* Add background image CSS here */
       body {
-        background-image: url('https://flyclipart.com/thumb2/price-college-of-business-ou-calendar-jcpenney-leadership-893159.png'); 
+        background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/326774171_910388373467225_8309189081923873401_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=jXN_BBF-27cAX_lCruQ&_nc_ht=scontent.ftul2-1.fna&oh=00_AfABHaPrwkv_M0xkeVRmbmj-AKQ8lg3D9CTVOvKEVDeKUw&oe=64FCE5F8'); 
         background-size: cover; /* Adjust as needed */
         background-repeat: no-repeat;
         background-attachment: fixed; /* Keeps the image fixed in the background */
