--- a/Join us.html
+++ b/Join us.html
@@ -8,7 +8,7 @@
     <style>
       /* Add background image CSS here */
       body {
-        background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/326774171_910388373467225_8309189081923873401_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=jXN_BBF-27cAX_lCruQ&_nc_ht=scontent.ftul2-1.fna&oh=00_AfABHaPrwkv_M0xkeVRmbmj-AKQ8lg3D9CTVOvKEVDeKUw&oe=64FCE5F8'); 
+        background-image: url('https://media.licdn.com/dms/image/C4E1BAQEoyVpuaavS0w/company-background_10000/0/1584479904482/jcplp_cover?e=1694250000&v=beta&t=v293KPuZzRlHFgYdgLwLhVjtbSoYOdnXA1-QS-ZYVKA'); 
         background-size: cover; /* Adjust as needed */
         background-repeat: no-repeat;
         background-attachment: fixed; /* Keeps the image fixed in the background */
