--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a class="navbar-brand" href="#">JCPENNEY LEADERSHIP PROGRAM</a>
             <a href="Highlight.html">HIGHLIGHT</a>
             <a href="Join us.html">JOIN US</a>
+            <a href="People.html">People</a>
     
         </div>
     </nav>
