--- a/People.html
+++ b/People.html
@@ -1,4 +1,4 @@
-
+ 
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,14 +19,18 @@
   </div>
   <div class="col-8">
     <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-      <h4 id="list-item-1">Item 1</h4>
-      <p>...</p>
-      <h4 id="list-item-2">Item 2</h4>
-      <p>...</p>
-      <h4 id="list-item-3">Item 3</h4>
-      <p>...</p>
-      <h4 id="list-item-4">Item 4</h4>
-      <p>...</p>
+      <h4 id="list-item-1"><strong>2022</strong></h4>
+      <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target="_blank">Spring 2022</a></p>
+      <h4 id="list-item-2"><strong>2021</strong></h4>
+      <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target="_blank">Fall 2021</a></p>
+      <h4 id="list-item-3"><strong>2020</strong></h4>
+       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020" target="_blank">Spring 2020</a></p>
+       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020" target="_blank">Summer 2020</a></p>
+      <h4 id="list-item-4"><strong>2019</strong></h4>
+       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019" target="_blank">Spring 2019</a></p>
+        <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019" target="_blank">Summer 2019</a></p>
+       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019" target="_blank">Fall 2019</a></p>
+     
     </div>
   </div>
 </div>
@@ -38,7 +42,7 @@
 
 
 
-
+https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020
 
 
 
