--- a/People.html
+++ b/People.html
@@ -1,61 +1,37 @@
- 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="row">
-  <div class="col-4">
-    <div id="list-example" class="list-group">
-      <a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
-      <a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
-      <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-      <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
+</head>
+<body>
+<div class="row">
+    <div class="col-4">
+        <div id="list-example" class="list-group">
+            <a class="list-group-item list-group-item-action" href="#list-item-1">2022</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-2">2021</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-3">2020</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-4">2019</a>
+        </div>
     </div>
-  </div>
-  <div class="col-8">
-    <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-      <h4 id="list-item-1"><strong>2022</strong></h4>
-      <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target="_blank">Spring 2022</a></p>
-      <h4 id="list-item-2"><strong>2021</strong></h4>
-      <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target="_blank">Fall 2021</a></p>
-      <h4 id="list-item-3"><strong>2020</strong></h4>
-       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020" target="_blank">Spring 2020</a></p>
-       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020" target="_blank">Summer 2020</a></p>
-      <h4 id="list-item-4"><strong>2019</strong></h4>
-       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019" target="_blank">Spring 2019</a></p>
-        <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019" target="_blank">Summer 2019</a></p>
-       <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019" target="_blank">Fall 2019</a></p>
-     
+    <div class="col-8">
+        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+            <h4 id="list-item-1"><strong>2022</strong></h4>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022">Spring 2022</a></p>
+            <h4 id="list-item-2"><strong>2021</strong></h4>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter">Fall 2021</a></p>
+            <h4 id="list-item-3"><strong>2020</strong></h4>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020">Spring 2020</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020">Summer 2020</a></p>
+            <h4 id="list-item-4"><strong>2019</strong></h4>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019">Spring 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019">Summer 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019">Fall 2019</a></p>
+        </div>
     </div>
-  </div>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</body>
 </html>
-
-
-
-
-
-https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
