--- a/Newsletter.html
+++ b/Newsletter.html
@@ -8,7 +8,7 @@
     <style>
         /* Add background image */
         body {
-            background-image: url('your-background-image.jpg'); /* Replace 'your-background-image.jpg' with your image path */
+            background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/346269191_1174482293949325_4326495172360647463_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5614bc&_nc_ohc=kQUEjra0iMcAX__Vn6T&_nc_ht=scontent.ftul2-1.fna&oh=00_AfA0W0NUCNvynMDPse_xPGPOLWkTBefsg_I2f5cJv8dkiQ&oe=64FDF121'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
