--- a/Newsletter.html
+++ b/Newsletter.html
@@ -7,8 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
          body {
-            background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/313024373_5739471069451978_8600557588831453002_n.jpg?stp=cp6_dst-jpg&_nc_cat=108&ccb=1-7&_nc_sid=5614bc&_nc_ohc=ABmWd_IN7DIAX9lMPVs&_nc_ht=scontent.ftul2-1.fna&oh=00_AfA4OqjrTVpSG0EQUKkA_04S9tJMoHs6btT-2AiSix16tg&oe=64FDEA2F'); /* Replace 'your-background-image.jpg' with your image path */
-            background-size: cover;
+            background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/313024373_5739471069451978_8600557588831453002_n.jpg?stp=cp6_dst-jpg&_nc_cat=108&ccb=1-7&_nc_sid=5614bc&_nc_ohc=ABmWd_IN7DIAX9lMPVs&_nc_ht=scontent.ftul2-1.fna&oh=00_AfA4OqjrTVpSG0EQUKkA_04S9tJMoHs6btT-2AiSix16tg&oe=64FDEA2F'); 
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-color: #f5f5f5; /* Cream color for the top bar */
@@ -68,12 +67,12 @@
         <div class="tab-pane fade show active" id="content-2022" role="tabpanel" aria-labelledby="tab-2022">
             <!-- Content for 2022 -->
             <h3>2022 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target="_blank">Spring 2022</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target=">Spring 2022</a></p>
         </div>
         <div class="tab-pane fade" id="content-2021" role="tabpanel" aria-labelledby="tab-2021">
             <!-- Content for 2021 -->
             <h3>2021 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target="_blank">Fall 2021</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target=">Fall 2021</a></p>
         </div>
         <div class="tab-pane fade" id="content-2020" role="tabpanel" aria-labelledby="tab-2020">
             <!-- Content for 2020 -->
