--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         }
 
         .card {
-            width: 18rem; /* Set a fixed width for all cards */
+            width: 18rem; 
         }
 
         .navbar img {
-            max-width: 100px; /* Reduce the size of the image in the navbar */
+            max-width: 100px; 
         }
     </style>
 </head>
@@ -41,6 +41,7 @@
             <a href="Join us.html">JOIN US</a>
             <a href="Newsletter.html">NEWSLETTER ARCHIVE</a>
             <a href="Highlight.html">HIGHLIGHT</a>
+            <a href="People.html">PEOPLE</a>
     
         </div>
     </nav>
